# OOP_Torubarov_Pizh-b-o-23-2

./: .gitignore  README.md  standard_session.txt  vip_session.txt
C++/labwork1/: main.cpp  readme.md
C++/labwork10/: main.cpp  readme.md
C++/labwork11/: main.cpp  readme.md
C++/labwork12/: main.cpp  readme.md
C++/labwork2/: main.cpp  readme.md
C++/labwork3/: main.cpp  readme.md
C++/labwork4/: main.cpp  readme.md
C++/labwork5/: main.cpp  readme.md
C++/labwork6/: main.cpp  readme.md
C++/labwork7/: id3_parser.cpp  main.cpp  readme.md
C++/labwork8/: CMakeLists.txt  README2.md  main.cpp  readme.md
C++/labwork8/include/: bst.hpp
C++/labwork8/tests/: CMakeLists.txt  bst_test.cpp
C++/labwork9/: README.md  main.cpp
the_snake-main/: README.md  the_snake.py
week01/: mypy.py
week01/composition/: composition.py  composition_classes.py
week01/constructor_and_destructor/: constructor_and_destructor.py
week01/first_project/: test_program.py
week01/incaps/: incaps.py
week01/nasled/: nasled.py
week01/peregruzka/: peregruzka.py
week01/polimorf/: polimorf.py
week01/teacher_and_pupil/: teacher_and_pupil.py
week01/voin/: voin.py
week02/: README.md  main.py  main_test.py
week03/: README.md
week03/Pizza/: README.md  заказ.py  пицца.py  терминал.py
week03/decorators/: README.md  decorators.py
week03/decorators_in_class/: README.md  decorators_in_class.py  decorators_in_class_test.py
week03/iterators_and_generators/: README.md  iterators_and_generators.py
week04/: .gitignore  README.md
week05/: README.md  test.json
(+18 files in other folders)
